# casper-account-info-contract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  rust-toolchain
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
account-info/: Cargo.toml
account-info/src/: admins.rs  call_set_url.rs  contract.rs  deposits.rs  lib.rs  urls.rs  utils.rs
contract/: Cargo.toml
contract/src/: main.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
tools/: get-account-info-url.sh  get-account-info.sh  get-cspr-to-burn-value.sh  is-admin.sh
validator-info/: Cargo.toml
validator-info/src/: lib.rs  main.rs  old.rs
