[package]
name = "account-info"
version = "0.2.0"
authors = ["https://github.com/make-software"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.3.0" }
types = { package = "casper-types", version="1.3.0" }
hex = "0.4.3"

[[bin]]
name = "account-info"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "call-set-url"
path = "src/call_set_url.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
