[package]
name = "account-info"
version = "0.3.0"
authors = ["https://github.com/make-software"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.3.2" }
types = { package = "casper-types", version="1.3.2" }
hex = "0.4.3"

[[bin]]
name = "account-info"
path = "src/contract.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
