[package]
name = "tests"
version = "0.2.0"
authors = ["https://github.com/make-software"]
edition = "2018"

[dependencies]

[dev-dependencies]
casper-contract = "1.2.0"
casper-types = "1.2.0"
casper-engine-test-support = "1.2.0"
hex = "0.4.3"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
