[package]
name = "validator-info"
version = "0.1.0"
authors = ["https://github.com/make-software"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }
regex = "1.4.5"
lazy_static = "1.4.0"

[[bin]]
name = "validator-info"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
