[package]
name = "validator-info"
version = "0.2.0"
authors = ["https://github.com/make-software", "Oleg Kovalov <oleg@make.services>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }
hex = "0.4.3"

[[bin]]
name = "validator-info"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
